Revision history for autobox::Core

1.30 (not yet released)
    Docs
    - Fixed typo reported by myfwhite on annocpan (xenu)

1.29
    Fix
    - Suppress smartmatch deprecation warnings in perls >= 5.18 (xenu)

1.28
    Misc
    - Make crypt() test optional for platforms without it (thanks Hugmeir)

1.27
    Misc
    - new version just to creage a new .tar.gz.  a './' owned by root
      apparently got added to the tar at some point after 'make dist'.

1.26
    Fix
    - remove 'use feature' from t/synopsis.t.  this lets older perls perl.

1.25 Wed Jun 12 14:45:54 CDT 2013
    Fix
    - remove 'use feature' from t/synopsis.t.  that was cut and paste from the 
      docs but wasn't actually necessary there.

1.24 Sun Jul 15 11:05:11 PDT 2012
    Misc
    - MANIFEST no longer includes previous distribution tar balls (Jacinta
      Richardson)

1.23 Thu Jul 12 18:05:46 PDT 2012
    Docs
    - Minor corrections (Jacinta Richardson)

1.22  Thu Jul 12 17:16:06 PDT 2012
    New Features
    - %hash->each is now guaranteed to iterate through the complete hash,
      unlike each(%hash). [github 7]
    - defined()

    Distribution Changes
    - Added Test::More 0.88 as a pre-req (Jacinta Richardson)
    - Added license for new versions of EMM

    Docs
    - Expanded module synopsis (Jacinta Richardson)
    - Wrote documentation for all (or most) functions
    - Tidied book extract (Jacinta Richardson)

    Incompatible changes (Jacinta Richardson)
    - Removed functions
      - rand
      - times
      - add
      - band
      - bor
      - bxor
      - div
      - eq
      - flip
      - ge
      - gt
      - le
      - lshift
      - mult
      - mcmp
      - ne
      - meq
      - mge
      - mgt
      - mle
      - mlt
      - mne
      - rshift
      - sub
      - autobox::Core::CODE::map

    Bug Fixes
    - xor uses xor instead of ^ (Jacinta Richardson)

1.21  Mon Sep 26 16:15:19 PDT 2011
    New Features